[tool.poetry]
name = "regions-updater"
version = "0.1.0"
description = "Обновление регионов в Elasticsearch"
authors = ["Sergey Tsepelev <tsepelev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
elasticsearch = "8.14"
python-dotenv = "^1.0.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
